# marvin

./: CMakeLists.txt  README.txt  SystemNode.cpp  manifest.xml
camera_node/: .#CMakeLists.txt
docs/: #Ros Instructions.txt#  Dev References.txt  Git Usage.txt  Installation Guide.txt  MMFPS-Draft paper.docx  Matlab Instructions.txt  System Overview.pptx  Usage Guide.txt  install_IPP.txt  mmfps.tgz
include/: BnetManager.h  CameraNode.h  FaceManager.h  RetailManager.h  SpeechManager.h  SystemManager.h  SystemParams.h  SystemUtility.h  abn.h  bkgndknowledge.h  bs.h  caselibrary.h  cbl.h  cidefinition.h  constants.h  datagenerator.h  dataset.h  dbcml.h  defcpt.h  defdemorgan.h  defequation.h  deflist.h  defmau.h  defnoisyadder.h  defnoisymax.h  deftable.h  deftruthtable.h  diag_network.h  discretizer.h  dmatrix.h  doublearray.h  dslarray.h  dslobject.h  dummy_test.hpp  em.h  errors.h  errorstrings.h  essentialsearch.h  extradefinition.h  fci.h  (+35 more)
l_ipp_7.1.1.117_intel64/: cd_eject.sh  install.sh
launch/: all.launch  camera.launch  cloud.launch  compute.launch  compute.launch~  current.launch  display.launch  face.launch  object.launch  speech.launch  system.launch  systemNode.launch  tablet.launch  test.launch
lib/: libGLEW.so.1.9
node_backend_aws/: backend_aws.py
node_backend_ros/: backend_ros.cpp  backend_ros.sh
node_bnet/: Debug  README.txt  README.txt~  Release  bnet.hpp  bnet2.hpp  exemplars.txt  gen_exemplars_file.py  generate_structure.py  include  latent_template.txt  learned_nets  lib  main.cpp  main_new.cpp  object_list.txt  options.txt  speech_keywords.txt  template.xdsl  vision_speech_model.hpp
node_camera/: README.txt
node_dm_bnet/: bnet_main.cpp~
node_dummy_tester/: dummy_test.cpp  dummy_test.cpp~  dummy_test.sh  dummy_test.txt  dummy_test_clear_in_hand.txt  dummy_test_clear_on_shelf.txt  dummy_test_clear_on_shelf.txt~  speech_clear_in_hand_repeat_1.txt  speech_clear_in_hand_repeat_5.txt  speech_clear_on_shelf_repeat_1.txt  speech_clear_on_shelf_repeat_5.txt  speech_partial_in_hand_repeat_1.txt  speech_partial_in_hand_repeat_5.txt  speech_partial_on_shelf_repeat_1.txt  speech_partial_on_shelf_repeat_5.txt  speech_unclear_in_hand_repeat_1.txt  speech_unclear_in_hand_repeat_5.txt  speech_unclear_on_shelf_repeat_1.txt  speech_unclear_on_shelf_repeat_5.txt  test_result_1.txt
node_face/: #denver_facedetector.hpp#  FaceCommander.py  denver_facedetector.hpp  face_detect_main.cpp  face_detect_main.cpp~  face_recognize_main.cpp  face_recognize_main.cpp~  face_train_main.cpp  face_train_main.cpp~  facedetectionizer.hpp  gen_labels.py  main.cpp  ros_facedetector.hpp  ros_facedetector.hpp~  ros_main.cpp  ros_main.cpp~
node_gui/: CMakeLists.txt  CMakeLists.txt~  README.txt  TAGS  gui3.cpp  gui3.cpp~  gui3.hpp  gui4.cpp  gui4.cpp~  out.ogv  shaders.cpp  shaders.cpp~
node_gui/gui_rev/: border_gui3.cpp  border_gui3.cpp~  gui3_border.cpp  gui3_border.cpp~  r0_gui3.cpp
node_gui/images/: alum_border.xcf  alum_border_bad.xcf  bottom_banner_await_request.xcf  bottom_banner_found.xcf  bottom_banner_how_service.xcf  bottom_banner_how_service2.xcf  bottom_banner_searching.xcf  bottom_banner_sorry.xcf  bottom_banner_taking_data.xcf  brushed_alu.xcf  brushed_alu2.xcf  cmd_tile.xcf  command_bar.xcf  face_tile.xcf  feedback_tile_mask.xcf  info_feedback.xcf  info_tile.xcf  initial_feedback.xcf  initial_feedback2.xcf  price_feedback.xcf  price_tile.xcf  reset_button.xcf  reset_strip.xcf  review_feedback.xcf  review_tile.xcf  right_strip.xcf  right_tile.xcf  scroll_bar.xcf  scroll_bar2.xcf  scroll_bar3.xcf  scroll_bar_mask.xcf  scroll_selected_tile2.xcf  scroll_tile.xcf  scroll_tile2.xcf  scroll_tile_shadow.xcf  selected_scroll_tile.xcf  selected_scroll_tile2.xcf  tartan.xcf  tile_shadow.xcf  topBanner.xcf  (+3 more)
node_gui/images/content/: empty_star_big.xcf  five_stars_big.xcf  four_h_stars_big.xcf  four_stars_big.xcf  half_star_big.xcf  one_h_stars_big.xcf  one_star_big.xcf  result_tile.xcf  star_big.xcf  three_h_stars_big.xcf  three_stars_big.xcf  two_h_stars_big.xcf  two_stars_big.xcf
node_gui/images/content/review/: bearpillow.xcf  bearpillow_review_mask.xcf
node_gui/images/info_images/price/: dentalfloss
node_gui/images/objects/: bearpillow.xcf  buglight.xcf  cleanser.xcf  clock.xcf  cream.xcf  dentalfloss.xcf  deodorant.xcf  detergent.xcf  disinfectwipes.xcf  duckclock.xcf  duster.xcf  kitchentimer.xcf  lock1.xcf  lock2.xcf  minifan.xcf  outlet2.xcf  outlet3.xcf  paperpunch.xcf  pencilsharpener.xcf  peppercontainer.xcf  pixelpad.xcf  powder_ed.xcf  shampoo1.xcf  shampoo2.xcf  sharpener.xcf  stapler.xcf
node_gui/shaders/: #frag_shader.glsl#  bw_frag_shader.glsl  calc_sound_frag.glsl  circular_blur_frag_shader.glsl  frag_shader.glsl~  listen_frag_shader.glsl~  screenshot_frag_shader.glsl  screenshot_frag_shader.glsl~  vertex_shader.glsl~
node_gui/shaders/gui4_shaders/: blend_and_mask_frag.glsl  blend_and_mask_frag.glsl~  blend_frag_shader.glsl  frag_scroll.glsl  frag_shader.glsl  frag_shader.glsl~  grey_mask_frag.glsl  mask_frag_shader.glsl  mask_frag_shader.glsl~  mix_blend_frag.glsl  shadow_frag.glsl  shadow_frag.glsl~  transition_blend_frag.glsl  vertex_shader.glsl
node_gui/shaders/rev_shaders/: border_frag.glsl  border_frag.glsl~  bw_frag_shader.glsl~  faded_frag_shader.glsl  stream_frag_shader.glsl  vert_shader.glsl
node_info/: #ReconInfo.cpp#  GuiInfoReceiver.cpp  GuiInfoReceiver.cpp~  ReconInfo.cpp  ReconReceive.cpp  RetailResultParser.cpp  RetailResultParser.cpp~
node_location/: location_main.cpp
node_logger/: main.cpp
node_object/: #gui.cpp#  #readObject.h#  .#gui.cpp  BNxls2mat.m  FakeExemplar.cpp  FakeExemplar_FakeMatlab.cpp  Makefile  Makefile~  RetailCommander.py  RetailRecognizer.cpp  SystemParams.h  a.m  bayesNet.m  confusion.m  confusion_matrix.mat  convert_to_I.m  esvm_detect.m  esvm_detect_fast.m  esvm_detect_rankedList.m  esvm_get_default_params.m  evalFrame.m  findObj.m  finder.m  gen_exemplar_matrix.m  gui.cpp  gui.cpp~  gui2  gui2.cpp  gui2.cpp~  init.cpp  init.cpp~  istcData.m  istcInit.m  istcLoad.m  istcTest.m  istcTrain.m  kill.sh  (+32 more)
(+1499 files in other folders)
